--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>T-Box老化测试</title>
+    <title>广州华望TBox老化测试系统</title>
     <script>global.electron = require('electron')</script>
   </head>
   <body>
